deploy: 4a727bcff90334bd34fe13f91d3605be1acd2a47

--- a/_sources/coding/Intro to Python/15_Flow_control_statements.ipynb
+++ b/_sources/coding/Intro to Python/15_Flow_control_statements.ipynb
@@ -6,19 +6,19 @@
    "source": [
     "(flow_control_statements)=\n",
     "# Flow control statements\n",
-    "``` {index} Break and continue statements\n",
+    "``` {index} Break and continue statements (python)\n",
     "```\n",
     "(break_continue)=\n",
     "## Break and continue statements\n",
     "\n",
-    "The _break_ and _continue_ statements are used in loops (_while_ or *for*) to modify behaviour of the loop. _break_ ends the loop, while _continue_ ends the current iteration and continues onto the next one.\n",
+    "The `break` and `continue` statements are used in loops (`while` or `for`) to modify the behaviour of the loop. `break` ends the loop, while `continue` ends the current iteration and continues onto the next one.\n",
     "\n",
-    "Example use of _break_ statement:"
+    "Example use of `break` statement:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -31,13 +31,11 @@
    ],
    "source": [
     "counter = 0\n",
-    "\n",
-    "while True: # Create an infinite loop\n",
-    "    \n",
+    "while True:  # Create an infinite loop\n",
     "    counter += 1\n",
     "    \n",
     "    if counter > 29:\n",
-    "        break # Exit the loop if counter is 30 or more\n",
+    "        break  # Exit the loop if counter is 30 or more\n",
     "        \n",
     "print(counter)"
    ]
@@ -46,12 +44,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Example use of _continue_ statement:"
+    "Example use of `continue` statement:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,8 +66,7 @@
    ],
    "source": [
     "for i in range(10):\n",
-    "\n",
-    "    if i%2 == 1: # Skip odd values\n",
+    "    if i%2 == 1:  # Skip odd values\n",
     "        continue\n",
     "        \n",
     "    print(i)"
@@ -81,14 +78,14 @@
    "source": [
     "(pass)=\n",
     "## Pass statement\n",
-    "``` {index} Pass statement\n",
+    "``` {index} Pass statement (python)\n",
     "```\n",
-    "_pass_ statement is used in the code to \"do nothing\"."
+    "`pass` statement is used in the code to \"do nothing\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,12 +124,12 @@
     "## Exercises\n",
     "-----------------\n",
     "\n",
-    "* **Floods** You are in charge of providing a software which will detect possible floods. You are given a time series of water levels (a list of ```int```) and a critical level (an ```int```). If water level rises, you should print ```1```, if it falls print ```-1```. If the level stays the same, the programme should do nothing. As soon as the detection is above the critical level, terminate the programme. \n"
+    "* **Floods** You are in charge of providing a software which will detect possible floods. You are given a time series of water levels (a list of integers) and a critical level (also an `int`). If water level rises, you should print `1` and if it falls print `-1`. If the level stays the same, the programme should do nothing. As soon as the detection is above the critical level, terminate the programme. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,30 +140,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    water_level = [0,1,1,2,1,4,5,3,2,4,7,8]\n",
+    "```python\n",
+    "water_level = [0,1,1,2,1,4,5,3,2,4,7,8]\n",
     "\n",
-    "    critical_level = 4\n",
-    "    prev_level = water_level[0]\n",
+    "critical_level = 4\n",
+    "prev_level = water_level[0]\n",
     "\n",
-    "    for i in water_level:\n",
+    "for i in water_level:\n",
     "\n",
-    "        if i > critical_level: \n",
-    "            print(\"Flood!\")\n",
-    "            break\n",
+    "    if i > critical_level: \n",
+    "        print(\"Flood!\")\n",
+    "        break\n",
     "\n",
-    "        if prev_level == i:\n",
-    "            continue\n",
-    "        elif prev_level < i:\n",
-    "            print(\"1\")\n",
-    "        else:\n",
-    "            print(\"-1\")\n",
+    "    if prev_level == i:\n",
+    "        continue\n",
+    "    elif prev_level < i:\n",
+    "        print(\"1\")\n",
+    "    else:\n",
+    "        print(\"-1\")\n",
     "\n",
-    "        prev_level = i\n",
-    "        \n",
-    "```"
+    "    prev_level = i      \n",
+    "```\n",
+    "\n",
+    "````"
    ]
   }
  ],
@@ -186,9 +185,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
