--- a/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
+++ b/_sources/coding/Intro to Python/1_Printing_and_formatting_statements.ipynb
@@ -6,17 +6,18 @@
    "source": [
     "(printing_intro)=\n",
     "# Printing and formatting statements\n",
-    "``` {index} Python basics\n",
-    "```\n",
-    "## General\n",
+    "\n",
+    "## Basic printing\n",
     "\n",
     "(basic_printing)=\n",
     "### Printing text\n",
     "A line of code in Python is a _statement_:\n",
     "\n",
-    "    print(\"Hellow world!\")\n",
+    "```python\n",
+    "print(\"Hello world!\")\n",
+    "```\n",
     "    \n",
-    "_print_ is a function in Python that takes an argument in brackets () and prints it out to the terminal."
+    "`print()` is a function in Python that takes an argument in brackets () and prints it out to the terminal."
    ]
   },
   {
@@ -40,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "_print_ function can also print multiple lines, using '\\n' as a line separator in your text. Notice that you do not need to add spaces around '\\n' in the text:"
+    "`print()` function can also print multiple lines, using `\\n` as a line separator in your text. Notice that you do not need to add spaces around `\\n` in the text:"
    ]
   },
   {
@@ -66,7 +67,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Multiple lines can be also achieved by triple apostrophe \"\"\"text\"\"\":"
+    "Multiple lines can be also achieved by triple apostrophe `\"\"\"text\"\"\"`:"
    ]
   },
   {
@@ -78,14 +79,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hellow world! \n",
+      "Hello world! \n",
       "This is my first code.\n",
       "    I love coding.\n"
      ]
     }
    ],
    "source": [
-    "print(\"\"\"Hellow world! \n",
+    "print(\"\"\"Hello world! \n",
     "This is my first code.\n",
     "    I love coding.\"\"\") # This # is a comment that has no effect on code\n",
     "\n",
@@ -97,12 +98,12 @@
    "metadata": {},
    "source": [
     "### Printing numbers\n",
-    "Apart from words, _print_ function can also take numbers and do some calculations:"
+    "Apart from text, which we call a *string*, `print()` function can also take numbers and variables:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -114,17 +115,21 @@
       "12\n",
       "51.5\n",
       "1000\n",
+      "45\n",
       "26.0\n",
       "106.0\n"
      ]
     }
    ],
    "source": [
-    "print(\"10\")     # Print text '10'\n",
+    "print(\"10\")     # Print a string '10'\n",
     "print(10)       # Print number 10\n",
     "print(10+5-3)   # Calculate 10+5-3\n",
-    "print(10*5+3/2) # Multiply wiht *, divide with /\n",
-    "print(10**3)    # To take powers, use **, here 10 to de power of 3\n",
+    "print(10*5+3/2) # Multiply with *, divide with /\n",
+    "print(10**3)    # To take powers, use **, here 10 to the power of 3\n",
+    "\n",
+    "a = 45\n",
+    "print(a)\n",
     "\n",
     "# Finally more difficult calculation, brackets matter in order of calculation!!\n",
     "\n",
@@ -137,26 +142,28 @@
    "metadata": {},
    "source": [
     "(formatted_printing)=\n",
-    "## Formatted printing\n",
-    "``` {index} Formatted printing\n",
+    "## String formating\n",
+    "``` {index} String formating (python)\n",
     "```\n",
-    "Sometimes we want to insert certain texts or numbers into _print_ statemtens.\n",
+    "Sometimes we want to insert certain texts (*strings*) or numbers into `print` statements.\n",
     "\n",
     "Inserting:\n",
-    "* use '%s' in the statement where you want to insert text\n",
-    "* use '%g' in the statement where you want to insert numbers, Python decides here how many significant figures are needed\n",
-    "* use '%.xf', where x is a number of significant figures you want displayed for your number\n",
+    "* use `%s` in the statement where you want to insert text\n",
+    "* use `%g` in the statement where you want to insert numbers, Python decides here how many significant figures are needed\n",
+    "* use `%.xf`, where x is a number of significant figures you want displayed for your number\n",
     "\n",
-    "The syntax (coding rules) for inserting numbers/text into _print_ statement is:\n",
+    "The syntax (coding rules) for inserting numbers/text into `print` statement is:\n",
     "\n",
-    "    print(\"Text %s text text text\" % (\"text\"))\n",
+    "```python \n",
+    "print(\"Text %s text text text\" % (\"text\"))\n",
+    "```\n",
     "    \n",
     "An example below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -174,17 +181,17 @@
     "print(\"My name is %s and I am %g years old.\" % (\"<insert your name>\", 18))\n",
     "\n",
     "# Work out your height in meters, provided you are 5 ft 4 in and insert into text\n",
-    "# 1 foot = 0.3048\n",
-    "# 1 inch = 0.0254\n",
+    "# 1 foot = 0.3048 m\n",
+    "# 1 inch = 0.0254 m\n",
     "\n",
-    "print(\"I am %.2f m tall.\" % (5*0.3048+4*0.0254))"
+    "print(\"I am %.2f m tall.\" % (5*0.3048 + 4*0.0254))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Format() method:\n",
+    "### Format() method and f-strings:\n",
     "This method allows to specify positions of the objects we want to insert into a string. For example:"
    ]
   },
@@ -235,6 +242,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Recent versions of python also support **f-strings** which allow us to do the above in a more simple way. They are called f-strings because they require `f` to be written in front of the quotation marks:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I like dinosaurs, brachiopods and ammonites.\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'dinosaurs'\n",
+    "b = 'brachiopods'\n",
+    "c = 'ammonites'\n",
+    "\n",
+    "print(f\"I like {a}, {b} and {c}.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Apart from strings, we can also insert numbers:"
    ]
   },
@@ -254,16 +289,16 @@
     }
    ],
    "source": [
-    "print(\"This fossil is {0:d} cm long and {1:.2f} cm wide.\".format(12, 5.05))\n",
-    "print(\"This fossil is {0:g} cm long and {1:.4f} cm wide.\".format(12.0, 5.05))\n",
-    "print(\"This fossil is {0:g} cm long and {1:8.4f} cm wide.\".format(12.0, 5.05))"
+    "print(f\"This fossil is {0:d} cm long and {1:.2f} cm wide.\".format(12, 5.05))\n",
+    "print(f\"This fossil is {0:g} cm long and {1:.4f} cm wide.\".format(12.0, 5.05))\n",
+    "print(f\"This fossil is {0:g} cm long and {1:8.4f} cm wide.\".format(12.0, 5.05))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Both methods are valid so you can use whichever one suits you better!"
+    "All methods are valid so you can use whichever one suits you better!"
    ]
   },
   {
@@ -280,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "tags": [
      "remove-input"
@@ -303,14 +338,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Anwser\n",
     ":class: dropdown\n",
     "\n",
-    "\n",
-    "    print(\"Veni vidi vici\")\n",
-    "\n",
+    "```python\n",
+    "print(\"Veni vidi vici\")\n",
+    "```\n",
     "    \n",
-    "```"
+    "````"
    ]
   },
   {
@@ -350,12 +385,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Anwser\n",
     ":class: dropdown\n",
-    "    print(\"First line\")\n",
-    "    print(\"Second line\")\n",
-    "    print(\"\\tBOOM!\")\n",
-    "```\n"
+    "\n",
+    "```python\n",
+    "print(\"First line\\nSecond line\\n\\tBOOM!\")\n",
+    "```\n",
+    "\n",
+    "````\n"
    ]
   },
   {
@@ -367,17 +404,21 @@
     "\n",
     "_\"John is a great fan of Shakespeare, so he decided to reference the famous \"Be of not the be?\" from 'The Hamlet' is his latest essay\"_\n",
     "\n",
-    "This is makes the Python parser confused. We need to use the backslash e.g. \"\\'\" to make things specific. **Print the sentence from the example.**"
+    "This confuses the Python parser because quotation marks are reserved for the beginning and end of a string. So we use backslash e.g. `\\\"` to *escape* certain characters (like we do with `\\n` and `\\t`). **Print the sentence from the example.**"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
-    "    print(John is a great fan of Shakespeare, so he decided to reference the famous \\“Be of not the be?\\” from \\'The Hamlet\\’ is his latest essay)\n",
-    "```"
+    "\n",
+    "```python\n",
+    "print(\"John is a great fan of Shakespeare, so he decided to reference the famous \\\"Be of not the be?\\\" from \\'The Hamlet\\' is his latest essay\")\n",
+    "```\n",
+    "\n",
+    "````"
    ]
   },
   {
@@ -386,34 +427,20 @@
    "source": [
     "__________________\n",
     "* **Printing can be art!** Use some characters to show your creativity! Try a triangle for example:\n",
-    "**HINT**: What about printing the backslash?\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#     /\\  \n",
-    "#    /  \\\n",
-    "#   /    \\  \n",
-    "#  /      \\  \n",
-    "#  --------"
+    "  \n",
+    "  **HINT**: What about printing the backslash?\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
-    ":class: dropdown\n",
-    "    print('''\n",
-    "        /\\\\\n",
-    "       /  \\\\\n",
-    "      /    \\\\\n",
-    "     /      \\\\\n",
-    "     ---------''')\n",
+    "```\n",
+    "    /\\  \n",
+    "   /  \\\n",
+    "  /    \\  \n",
+    " /      \\  \n",
+    " --------\n",
     "```"
    ]
   },
@@ -421,7 +448,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want more, google ASCII art, people can really go insane with those..."
+    "````{admonition} Answer\n",
+    ":class: dropdown\n",
+    "\n",
+    "```python\n",
+    "print('''\n",
+    "    /\\\\\n",
+    "   /  \\\\\n",
+    "  /    \\\\\n",
+    " /      \\\\\n",
+    " ---------''')\n",
+    "```\n",
+    "\n",
+    "We had to escape the backslash by putting another backslash in front of it. We could achieve the same with **raw strings**, which, similarly to f-strings, need to begin with `r` and they will escape the backslash `\\` automatically, i.e. the string will be printed *raw* - exactly as it is written, without any special features like `\\n` and `\\t`.\n",
+    "\n",
+    "```python\n",
+    "print(r'''\n",
+    "    /\\\n",
+    "   /  \\\n",
+    "  /    \\\n",
+    " /      \\\n",
+    " ---------''')\n",
+    "```\n",
+    "\n",
+    "````"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you want more inspiration, google ASCII art."
    ]
   },
   {
@@ -477,9 +534,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
