--- a/_sources/coding/Intro to Python/4_While_loops.ipynb
+++ b/_sources/coding/Intro to Python/4_While_loops.ipynb
@@ -8,26 +8,23 @@
     "# While loops\n",
     "``` {index} Loops: while loops\n",
     "```\n",
-    "_While_ loops repeat instructions until certain condition is **False** (while the condition is **True**). The syntax is as follows:\n",
+    "`while` loops repeat instructions until certain condition is `False` (while the condition is `True`). The syntax is as follows:\n",
     "    \n",
-    "    while boolean:\n",
-    "        # Some code to be executed while boolean is True\n",
+    "```\n",
+    "    while condition:\n",
+    "        # Some code to be executed repeatedly as long as condition is True\n",
     "        \n",
     "    # Some more code to be executed once the while loop is over, executed once\n",
+    "```\n",
     "    \n",
-    "Some _while_ loops are infinite, where the condition never becomes **False**. A _while_ loop, similar to _if_ statements, needs the code to be indented."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Some `while` loops are infinite, where the condition never becomes `False`. A `while` loop, like `if` statements, needs the code to be indented.\n",
+    "\n",
     "## Example"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -35,7 +32,6 @@
      "output_type": "stream",
      "text": [
       "Initial counter is:  0\n",
-      "\n",
       "Entering while loop\n",
       "1\n",
       "2\n",
@@ -49,27 +45,22 @@
       "10\n",
       "11\n",
       "While loop finished.\n",
-      "\n",
       "Final counter is:  11\n"
      ]
     }
    ],
    "source": [
-    "counter = 0 # Set counter\n",
-    "\n",
+    "counter = 0  # Set counter\n",
     "print(\"Initial counter is: \", counter)\n",
     "\n",
-    "print(\"\\nEntering while loop\")\n",
-    "\n",
+    "print(\"Entering while loop\")\n",
     "while counter <= 10:\n",
-    "    \n",
-    "    # Add one to the counter until it is equal to 10\n",
-    "    counter = counter + 1\n",
+    "    # Increase counter by 1 as long as it is <= 10\n",
+    "    counter += 1\n",
     "    \n",
     "    print(counter)\n",
     "    \n",
-    "print(\"While loop finished.\\n\")\n",
-    "    \n",
+    "print(\"While loop finished.\")\n",
     "print(\"Final counter is: \", counter)"
    ]
   },
@@ -81,31 +72,32 @@
     "## Exercises\n",
     "-----------\n",
     "\n",
-    "* **Write a program** that prints all Fibonacci numbers smaller than 50. Fibonnaci sequence satifies the following:\n",
+    "* **Write a program** that prints all Fibonacci numbers smaller than 50. An example of a Fibonacci sequence is the following:\n",
     "\n",
-    "\\\\( F_0 = 0, F_1 = 1, F_{n}=F_{n-1}+F_{n-2}\\\\)"
+    "\\\\[ F_0 = 0,\\quad F_1 = 1, \\quad F_{n}=F_{n-1}+F_{n-2}.\\\\]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    first = 0\n",
-    "    second = 1\n",
+    "```python\n",
+    "first = 0\n",
+    "second = 1\n",
     "\n",
-    "    print(first)\n",
+    "print(first)\n",
     "\n",
-    "    while second <= 50:\n",
+    "while second <= 50:\n",
+    "    print(second)\n",
+    "    temp = first + second\n",
+    "    first = second\n",
+    "    second = temp\n",
+    "```\n",
     "\n",
-    "        print(second)\n",
-    "        temp = first + second\n",
-    "        first = second\n",
-    "        second = temp\n",
-    "\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -114,33 +106,33 @@
    "source": [
     "-----------\n",
     "\n",
-    "* **Create a _while_ loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
+    "* **Create a `while` loop** to find Celsius temperatures for Fahrenheit temperatures between 20\\\\(^\\circ\\\\)F and 80\\\\(^\\circ\\\\)F at 5\\\\(^\\circ\\\\)F increments. The Fahrenheit-Celsius conversion formula is:\n",
     "\n",
-    "\\\\( T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32) \\\\)"
+    "\\\\[ T_{Celsius} = \\frac{5}{9}*(T_{Fahrenheit}-32). \\\\]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    temp_F = 20           # Initial temperature in Fahrenheit\n",
-    "    dF = 5                # Increment in Fahrenheit\n",
+    "```python\n",
+    "temp_F = 20           # Initial temperature in Fahrenheit\n",
+    "dF = 5                # Increment in Fahrenheit\n",
     "\n",
-    "    while temp_F <= 80:\n",
+    "while temp_F <= 80:\n",
+    "    temp_C = 5./9.*(temp_F-32)  # Calculate the temperature in Celsius\n",
     "\n",
-    "        temp_C = 5./9.*(temp_F-32) # Calculate the temperature in Celsius\n",
+    "    # A nicely formatted f-string\n",
+    "    print(f\"{temp_F:.2f} degrees Fahrenheit is {temp_C:.2f} degrees Celsius.\")\n",
     "\n",
-    "        # Make a nicely formatted print statement\n",
+    "    # Add increment to the temperature for the next iteration\n",
+    "    temp_F = temp_F + dF\n",
+    "```\n",
     "\n",
-    "        print(\"%.2f degrees Fahrenheit is %.2f degrees Celsius.\" % (temp_F, temp_C))\n",
-    "\n",
-    "        # Add increment to the temperature so it increases with each loop\n",
-    "\n",
-    "        temp_F = temp_F + dF\n",
-    "```"
+    "````"
    ]
   }
  ],
@@ -160,9 +152,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
