--- a/_sources/coding/Intro to Python/5_Lists.ipynb
+++ b/_sources/coding/Intro to Python/5_Lists.ipynb
@@ -6,18 +6,20 @@
    "source": [
     "(lists)=\n",
     "# Lists\n",
-    "``` {index} Lists\n",
+    "``` {index} Lists (python)\n",
     "```\n",
-    "A list is an object that contains multiple elements in defined order (referred to as index number). The syntax is:\n",
+    "A list is an object that contains multiple elements in defined order (called an **index** number). The syntax is:\n",
     "\n",
-    "    l = [element1, element2, element3, element4, etc..]\n",
+    "```\n",
+    "    l = [element0, element1, element2, element3, ...]\n",
+    "```\n",
     "    \n",
-    "To extract a specific element or part of the list, we can use slicing syntax:"
+    "Note that indexing in python starts at 0! To extract a specific element or part of the list, we can use slicing syntax:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -34,16 +36,16 @@
    "source": [
     "l = [1, 3, 5, 9, 7, 11]\n",
     "\n",
-    "# Print first element\n",
+    "# Print first element (index 0!)\n",
     "print(l[0])\n",
     "\n",
-    "# Print elements three to six, returns a list\n",
+    "# Print elements three to six (not inclusive), returns a list\n",
     "print(l[2:6])\n",
     "\n",
-    "# Print every other elements but the last two excluded\n",
-    "print(l[0:-3:2])\n",
+    "# Print every second element but the last two excluded\n",
+    "print(l[:-3:2])\n",
     "\n",
-    "# Returns class list\n",
+    "# Print what class l is\n",
     "print(type(l))"
    ]
   },
@@ -51,12 +53,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The same operations can be done to lists with strings:"
+    "The same operations can be done to lists of strings:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -151,36 +153,37 @@
     "## Exercises\n",
     "-------\n",
     "\n",
-    "* **Multitype lists** compared to other programming languages Python is very flexible when it comes to types inside them, we can have a following list:\n",
+    "* **Multi-type lists** compared to other programming languages Python is very flexible when it comes to types of objects inside them. For example, we can have the following list:\n",
     "\n",
-    "       l = [1,\"0\",True]\n",
-    "        \n",
-    "    Try to transform the list into the following one using list operations such as del and append:\n",
+    "        l = [1,\"0\",True]\n",
+    "\n",
+    "    Try to transform the above list into the following one using list operations such as `del` and `append`:\n",
     "\n",
     "        l = [1,2,3]\n",
-    "        \n",
-    "    Check the maximum of the list\n"
+    "\n",
+    "    Print the largest element of the list.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    l = [1,\"0\",True]\n",
+    "```python\n",
+    "l = [1,\"0\",True]\n",
     "\n",
-    "    del l[2]\n",
-    "    del l[1]\n",
-    "    l.append(2)\n",
-    "    l.append(3)\n",
+    "del l[2]\n",
+    "del l[1]\n",
+    "l.append(2)\n",
+    "l.append(3)\n",
     "\n",
-    "    print(l)\n",
-    "    print(max(l))\n",
+    "print(l)\n",
+    "print(max(l))\n",
+    "```\n",
     "\n",
-    "\n",
-    "```"
+    "````"
    ]
   },
   {
@@ -207,9 +210,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
