--- a/_sources/coding/Intro to Python/10_Importing.ipynb
+++ b/_sources/coding/Intro to Python/10_Importing.ipynb
@@ -6,16 +6,16 @@
    "source": [
     "(importing)=\n",
     "# Importing in Python\n",
-    "``` {index} Importing modules\n",
+    "``` {index} Importing modules (python)\n",
     "```\n",
-    "Python's growing popularity over the years has inevitably lead to the development of thousands of excellent libraries and frameworks. This section will cover the basics of importing them, but also cover how to import your own classes, functions and much more.\n",
+    "Python's growing popularity over the years has inevitably lead to the development of thousands of excellent libraries and python-based frameworks. This section will cover the basics of importing them, but also cover how to import your own classes, functions and much more.\n",
     "\n",
     "Often we will want to import many functions and objects from a certain module, so we would simply import the entire module: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,12 +36,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Importing the whole math module allows us to use everything inside it, such as the sin function. However, if we only need the sin function from the math module, it is good practice to import only that."
+    "Importing the whole math module allows us to use everything inside it, such as the `sin` function. However, if we only need the `sin` function from the math module, it is good practice to import only that."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -62,12 +62,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When imported like this, we no longer need to use the \"math.\" prefix, because this also imported sin into our namespace. If we instead do:"
+    "When imported like this, we no longer need to use the `math.` prefix, because this also imported `sin` into our namespace. If we instead do:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -88,12 +88,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we have imported everything from the math module AND we put everything from it into our namespace. This is generally **not** recommended, as it can overshadow our other functions with the same name. The same can happen if we import a single function. We can avoid this by renaming our imports."
+    "Here we have imported everything from the math module **and** we put everything from it into our namespace. This is generally **not** recommended, as it can overshadow our other functions with the same name. The same can happen if we import a single function. We can avoid this by renaming our imports."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we want to import a function from a specific file, say a file named 'my_module.py' and it is located in the same folder as the python script into which we want to import it, we simply write:"
+    "If we want to import a function from a specific file, say a file named `my_module.py` and it is located in the same folder as the python script into which we want to import it, we simply write:"
    ]
   },
   {
@@ -143,7 +143,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where my_function is just a square in this case. In general, we can specify a path to our module. For example, if our my_module.py file is on our Desktop, we could import it with:"
+    "Where `my_function` is just a square in this case. In general, we can specify a path to our module. For example, if our `my_module.py` file is on our Desktop, we could import it with:"
    ]
   },
   {
@@ -165,32 +165,48 @@
     "## Exercises\n",
     "------------\n",
     "\n",
-    "* **Choose your function!** Mike decides to play a bit with Python functional interface and module importing, he creates a strange list:\n",
+    "* **Choose your function!** Mike decides to play a bit with Python functional interface and module importing, so he creates a strange list:\n",
     "\n",
+    "```python\n",
     "        f = [math.sin, math.cos,math.tan, math.log, random.randrange]\n",
+    "```\n",
     "        \n",
-    "He wants to create a program which will take (at random) a function from the list and apply in to the number \\\\(a\\\\). The process should be repeated \\\\(n\\\\) times. Help Mike!"
+    "He wants to create a program which will take (at random) a function from the list and apply it to the number \\\\(a\\\\). The process should be repeated \\\\(n\\\\) times. Help Mike!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
-    "    import math\n",
-    "    import random\n",
-    "    \n",
-    "    f = [math.sin, math.cos, math.tan, math.log, random.randrange]\n",
+    "```python\n",
+    "import math\n",
+    "import random\n",
     "\n",
-    "    a = 4\n",
-    "    n = 10\n",
-    "    for i in range(n):\n",
-    "        print(f[random.randint(0,len(f)-1)](a))       \n",
-    "        \n",
-    "```"
+    "f = [math.sin, math.cos, math.tan, math.log, random.randrange]\n",
+    "\n",
+    "a = 4\n",
+    "n = 10\n",
+    "for i in range(n):\n",
+    "    j = random.randint(0,len(f)-1)  # random int between 0 and len(f)-1\n",
+    "    \n",
+    "    # print the name of function, a and result in an f-string\n",
+    "    print(f\"{f[j].__name__}({a}) = {f[j](a)}\")\n",
+    "    \n",
+    "    # to print just the result: print(f[j](a))     \n",
+    "```\n",
+    "\n",
+    "````"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -209,9 +225,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
