--- a/_sources/coding/Intro to Python/9_Handling_errors.ipynb
+++ b/_sources/coding/Intro to Python/9_Handling_errors.ipynb
@@ -6,8 +6,6 @@
    "source": [
     "(handling_errors)=\n",
     "# Handling errors\n",
-    "``` {index} Handling errors\n",
-    "```\n",
     "When an _error_ occurs in Python, an _exception_ is _raised_. \n",
     "\n",
     "(error_types)=\n",
@@ -16,10 +14,8 @@
     "\n",
     "For example, when we create a tuple with only four elements and want to print the 5th element, we get this error message:\n",
     "\n",
-    "    flower_names = (\"iris\",\n",
-    "                    \"poppy\",\n",
-    "                    \"dandelion\",\n",
-    "                    \"rose\")\n",
+    "```python\n",
+    "    flower_names = (\"iris\", \"poppy\", \"dandelion\", \"rose\")\n",
     "\n",
     "    print(flower_names[4])\n",
     "\n",
@@ -31,13 +27,15 @@
     "    ----> 6 print(flower_names[4])\n",
     "\n",
     "    IndexError: tuple index out of range\n",
+    "```\n",
     "    \n",
-    "IndexError refers to incorrect index, such as out of bounds.\n",
+    "`IndexError` refers to incorrect index, such as out of bounds.\n",
     "\n",
     "(raising_errors)=\n",
     "## Raising errors\n",
-    "In-built functions trigger or _raise_ errors in Python. We can do that as well by using _raise_:\n",
+    "In-built functions trigger or `raise` errors in Python. We can do that as well by using _raise_:\n",
     "\n",
+    "```python\n",
     "    raise ValueError\n",
     "\n",
     "    ---------------------------------------------------------------------------\n",
@@ -46,36 +44,41 @@
     "    ----> 1 raise ValueError\n",
     "\n",
     "    ValueError:\n",
+    "```\n",
     "    \n",
     "## Catching errors\n",
+    "\n",
     "(try_except)=\n",
     "### Try and except blocks\n",
-    "To handle errors in the code gracefully, we can use _try_ and _except_ blocks to avoid unnecessary crashes of the program. The _try_ block executes the program and if the program fails, exception is raised and we can recover from the error. This is especially useful if we do not want our program to crash (imagine YouTube crashing!). The syntax is:\n",
+    "To handle errors in the code gracefully, we can use `try` and `except` blocks to avoid unnecessary crashes of the program. The `try` block executes the program and if the program fails, exception is raised and we can recover from the error. This is especially useful if we do not want our program to crash (imagine YouTube crashing!). The syntax is:\n",
     "\n",
+    "```python\n",
     "    try:\n",
     "        # some code\n",
     "    except ExceptionName1:\n",
-    "        # some code\n",
+    "        # code to be executed if ExceptionName1 is raised\n",
     "    except ExceptionName2:\n",
-    "        # some code\n",
+    "        # code to be executed if ExceptionName2 is raised\n",
     "    …\n",
     "    except:\n",
     "        # lines to execute if there was an exception not caught above\n",
     "    else:\n",
     "        # lines to execute if there was no exception at all\n",
-    "_else_ is optional, at least one _except_ needs to be raised. An example code below:"
+    "```\n",
+    "\n",
+    "`else` is optional, at least one `except` needs to be raised. An example code below:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Exception was raised.\n",
+      "ValueError.\n",
       "Please use digits in your string.\n"
      ]
     }
@@ -83,17 +86,13 @@
    "source": [
     "a = \"ten\"\n",
     "\n",
+    "# Try to create a number out of a string\n",
     "try:\n",
-    "    \n",
-    "    # Try to create a number out of a string\n",
-    "    \n",
     "    float(a)\n",
     "    \n",
+    "# Raise an error if characters are not numbers    \n",
     "except ValueError:\n",
-    "    \n",
-    "    # Raise an error if characters are not numbers\n",
-    "    \n",
-    "    print(\"Exception was raised.\\nPlease use digits in your string.\")"
+    "    print(\"ValueError.\\nPlease use digits in your string.\")"
    ]
   },
   {
@@ -103,116 +102,31 @@
     "(handling_errors_exercises)=\n",
     "## Exercises\n",
     "------------\n",
-    "* **Identify** which errors will be thrown in the following code samples (without running it :D):\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 's' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-964a7f747009>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m+=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 's' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "s+=1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-2-90366a66442d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0ms\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
-   "source": [
+    "* **Identify** which errors will be thrown in the following code samples (without running it!):\n",
+    "\n",
+    "```python\n",
+    "s += 1\n",
+    "```\n",
+    "\n",
+    "```python\n",
     "s = [1,0,1,3,2,4]\n",
-    "s[9]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {
-    "scrolled": true,
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "can only concatenate str (not \"int\") to str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-a447d8e131a1>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;34m\"str\"\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;36m7\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
-     ]
-    }
-   ],
-   "source": [
-    "\"str\" + 7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "tags": [
-     "remove-output"
-    ]
-   },
-   "outputs": [
-    {
-     "ename": "OverflowError",
-     "evalue": "cannot fit 'int' into an index-sized integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mOverflowError\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-6-1ff1a3b0e706>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m**\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mOverflowError\u001b[0m: cannot fit 'int' into an index-sized integer"
-     ]
-    }
-   ],
-   "source": [
-    "[0]*(2**5000)"
+    "s[9]\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "\"str\" + 7\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "[0]*(2**5000)\n",
+    "```"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "```{admonition} Answer\n",
     ":class: dropdown\n",
     "\n",
     "1) NameError\n",
@@ -222,8 +136,6 @@
     "3) TypeError\n",
     "\n",
     "4) OverflowError\n",
-    "\n",
-    "\n",
     "```"
    ]
   },
@@ -234,32 +146,48 @@
     "_________________\n",
     "* **Types are gone!** Say we have a list:\n",
     "\n",
-    "        l = [1,True, 4, \"blob\", \"boom\", 5,6, print]\n",
+    "```python\n",
+    "        l = [1, True, 4, \"blob\", \"boom\", 5, 6, print]\n",
+    "```\n",
     "        \n",
-    "Compute the sum of the numerical element of the list (do not use the \\\\(type()\\\\) function!). Anything interesting regarding the boolean constants?   \n",
+    "Compute the sum of the numerical elements of the list (do not use the `type()` function!). Is the sum what you expected? Do you notice anything interesting regarding the boolean constants?\n",
     "\n",
-    "**HINT**: Consider using a ```pass``` statement in the ```except``` block which circumvents (*ignores*) the raised error and continues the execution."
+    "```{margin}\n",
+    "You can look up here more on flow control statemnts, such as {ref}`pass statement <pass>`.\n",
+    "```\n",
+    "\n",
+    "**HINT**: Consider using a `pass` statement in the `except` block which circumvents (*ignores*) the raised error and continues the execution."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{admonition} Anwser\n",
+    "````{admonition} Answer\n",
     ":class: dropdown    \n",
     "\n",
-    "    l = [1,True, 4, \"blob\", \"boom\", 5,6, print]\n",
-    "    res = 0\n",
+    "```python\n",
+    "l = [1, True, 4, \"blob\", \"boom\", 5, 6, print]\n",
     "\n",
-    "    for i in l:\n",
-    "        try:\n",
-    "            res+=i\n",
-    "        except TypeError:\n",
-    "            pass\n",
+    "res = 0\n",
+    "for element in l:\n",
+    "    try:\n",
+    "        res += element\n",
+    "    except TypeError:\n",
+    "        pass\n",
     "\n",
-    "    print(res)\n",
-    "```"
+    "print(res)\n",
+    "```\n",
+    "\n",
+    "````"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -279,9 +207,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
