--- a/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
+++ b/notebooks/coding/Programming Tools/1_Version_Control_Git.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "(version_control_git)=\n",
-    "# Version Control Git\n",
+    "# Version control git\n",
     "\n",
     "As a future researcher, professional or enthusiast you will find that maintaing a high standard of code is a considerable challenge. This can get even harder when multiple programmers are involved. Coding can be very rewarding, but it is also ful of pitfalls and requires a *trial-and-error* approach.  \n",
     "\n",
@@ -35,11 +35,46 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "There are two ways of initialising a github *repo* (= repository), one can be done via terminal only. In the second option we create a repository on Github and then connect to it with the terminal. \n",
+    "\n",
+    "If you want to try the first option, check out [this page](https://kbroman.org/github_tutorial/pages/init.html). Otherwise follow these steps.\n",
+    "\n",
+    "1) Create a GitHub account [here](https://github.com/join)\n",
+    "\n",
+    "2) Click your profile picture in the upper right corner -> Your Repositories -> New (Green)\n",
+    "\n",
+    "3) Choose a name (\"MyFirstRepo\"?)\n",
+    "\n",
+    "4) Set to Private\n",
+    "\n",
+    "5) Initialise this repository with a README (used to describe the repository)\n",
+    "\n",
+    "6) Create Repository (Green)\n",
+    "\n",
+    "Now your repository is on Github, time to connect it to your local machine.\n",
+    "\n",
+    "1) In the repository window click Code (Green)\n",
+    "\n",
+    "2) Copy the given link (you might have an option to use SHH or HTTPS - the latter will be simpler for now)\n",
+    "\n",
+    "3) Now go to the terminal\n",
+    "\n",
+    "4) Type  ```git clone LINKYOUCOPIED``` e.g  ```git clone https://github.com/funnyaccount/MyFirstRepoTutorial``` and hit enter. You might be asked for your GitHub  credentials.\n",
+    "\n",
+    "Congratulations, your repo is on your machine!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Playing with MyFirstRepo\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
